# esp32

./: CMakeLists.txt  README.md  docker-compose.yml  index.html  index_backup.html  instructions.md  rogue-library-restore-ble-hook.patch
evil_esp/: CMakeLists.txt  partitions.csv
evil_esp/main/: CMakeLists.txt  main.c
evil_esp/payload/: CMakeLists.txt  sdkconfig.defaults
evil_esp/payload/main/: CMakeLists.txt  main_payload.c
evil_esp/target_esp32/: CMakeLists.txt
evil_esp/target_esp32/main/: CMakeLists.txt  main.c
gatt_client/: CMakeLists.txt  partitions.csv
gatt_client/main/: CMakeLists.txt  gattc_demo.c  gattc_demo_backup.c
gatt_server/: CMakeLists copy.txt  partitions.csv
gatt_server/components/rogue_weather_codec/: CMakeLists.txt  Kconfig  partitions.csv  rogue_weather_codec.c
gatt_server/components/rogue_weather_codec/include/: rogue_weather_codec.h
gatt_server/main/: CMakeLists.txt  gatts_demo.c  idf_component.yml  vulnerabilities.c  vulnerabilities.h
gatt_server_ble_hijack/main/: CMakeLists.txt
gatt_server_ble_hijackOLD/: partitions.csv
gatt_server_ble_hijackOLD/main/: gatts_demo.c  idf_component.yml
main/: CMakeLists.txt  main.c  main_backup.c
mosquitto/: mosquitto.conf
server/: Dockerfile  onveilig.py  script.py  server.py
